package com.donatrack.incentivos.domain.entities.categoria;

public enum CategoriaDonante {
    COLABORADOR,
    SOSTENEDOR,
    TRANSFORMADOR
}
