@startuml DonaTrack_ServicioIncentivos_DiagramaClases
skinparam classAttributeIconSize 0

package "Servicio de Incentivos" {

    enum CategoriaDonante {
        COLABORADOR
        SOSTENEDOR
        TRANSFORMADOR
    }

    enum TipoMetricaMision {
        DONACIONES_EXITOSAS
        MAX_BIENES
        MESES_CONSECUTIVOS
        CATEGORIAS_DISTINTAS
    }

    class PerfilDonante {
        - donanteId: UUID
        - categoria: CategoriaDonante
        - insigniasObtenidas: List<Insignia>
        - misionesPendientes: Queue<Mision>
        - misionActual: Mision
        - metricas: MetricasDonante
        + cargarMisionesDeCategoriaActual()
        + registrarDonacionExitosa(donacion: RegistroDonacion)
        + procesarInactividad(mesActual: YearMonth)
        + evaluarMisiones(mesActual: YearMonth)
    }

    note right of PerfilDonante
      **Regla de negocio:**
      procesarInactividad() resetea
      las métricas como la "racha" si 
      pasa un mes completo sin donar.
    end note

    class MetricasDonante {
        - donanteId : UUID
        - registrosDonacion: List<RegistroDonacion>
        - misionesCompletadas: Map<Mision, YearMonth>
        + registrarDonacion(donacion: RegistroDonacion) : void
        + registrarMisionCompletada(mes: YearMonth) : void
        + obtenerTodasLasDonaciones() : List<RegistroDonacion>
        + obtenerDonacionesExitosas() : List<RegistroDonacion>
        + obtenerMisionesCompletadasEn(mes: YearMonth) : List<Mision>
    }

    class RegistroDonacion {
        - idDonacion : UUID
        - cantidadBienes: int
        - categorias: Set<String>
        - idEntidadBeneficiaria: UUID
        - mesDonacion: YearMonth
        + esExitosa() : boolean
    }

    class Mision {
        - id: UUID
        - nombre: String
        - recompensa: Insignia
        - tipoMetrica: TipoMetricaMision
        - objetivo: int
        + evaluar(perfil: PerfilDonante): boolean
        + getProgresoActual(perfil: PerfilDonante): String
    }
    
    note left of Mision
      **Regla de negocio:**
      El método evaluar() utiliza un 
      switch(tipoMetrica) y procesa las 
      listas de MetricasDonante para 
      calcular el progreso.
    end note

    class Insignia {
        - nombre: String
        - descripcion: String
        - fechaObtencion: LocalDate
        - visiblePublicamente: boolean
    }

    class InsigniaObtenidaEvent {
        - donanteId: UUID
        - insignia: Insignia
    }

    class MisionesFactory {
        + crearMisionesPara(categoria: CategoriaDonante): Queue<Mision>
    }

    class RankingMensualService {
        - puntuacionStrategy: RankingStrategy
        + obtenerTop3Mensual(mes: YearMonth): List<PerfilDonante>
    }

    interface RankingStrategy {
        + calcularPuntaje(perfil: PerfilDonante, mes: YearMonth): double
    }

    class RankingMisionesStrategy implements RankingStrategy {
        + calcularPuntaje(perfil: PerfilDonante, mes: YearMonth): double
    }

    ' Relaciones
    PerfilDonante "1" *-- "1" CategoriaDonante : nivel actual >
    PerfilDonante "1" *-- "0..*" Mision : pendientes >
    PerfilDonante "1" *-- "0..*" Insignia : posee >

    Mision --> Insignia : recompensa >
    Mision --> TipoMetricaMision : evalúa >
    PerfilDonante "1" *-- "1" MetricasDonante : delega métricas >
    PerfilDonante ..> RegistroDonacion : usa >
    MetricasDonante ..> RegistroDonacion : procesa >

    MisionesFactory ..> Mision : instancia >
    MisionesFactory ..> CategoriaDonante : usa >

    InsigniaObtenidaEvent --> Insignia : refiere >

    RankingMensualService --> RankingStrategy : utiliza >
    RankingStrategy ..> PerfilDonante : evalúa >
}
@enduml